fixed color contrast issues on home and projects page

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -183,6 +183,7 @@ li {
     }
   }
   &-moz-text {
+    color: #b2babd;
     max-width: 400px;
     text-align: center;
   }
